<resources>
    <string name="app_name">SnehaAssignment1</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Hello">Hello</string>

    <string name="tv_login_title">Login</string>
    <string name="tv_signUp_title">SignUp /</string>

    <string name="hint_email">Enter the EmailId</string>
    <string name="hint_password">Enter the Password</string>
    <string name="btn_login">Login</string>

    <string name="name_signUp">Enter the Name</string>
    <string name="hint_emailId_signUp">Enter the EmailId</string>
    <string name="hint_mobile_signUp">Enter the mobile number</string>
    <string name="hint_password_signUp">Enter the password</string>
    <string name="DOB">Enter the date of birth</string>
    <string name="btn_signUp">Sign Up</string>
    <string name="alert_username_should_not_be_blank">Username should not be blank</string>
    <string name="alert_username_should_contain_uppercase_lowercase_number">username should contain uppercase lowercase number</string>
    <string name="alert_email_should_not_be_blank">EmailId should not be blank</string>
    <string name="alert_enter_valid_emailId">Enter Valid EmailId</string>
    <string name="alert_Mobile_number_should_not_be_blank">Mobile Number should not be blank</string>
    <string name="alert_Enter_valid_mobile_number">Mobile Number should be valid</string>
    <string name="alert_password_should_not_be_blank">Password should not be blank</string>
    <string name="alert_enter_valid_password">Enter the Valid password</string>
    <string name="alert_user_already_exist">User already exists</string>
    <string name="alert_email_and_password_do_not_match">emailId and password do not match</string>

    <string name="home_page_title">WELCOME TO HOME ACTIVITY</string>

    <string name="toolbar_title">USER LIST</string>
    <string name="toolbar_title_of_UserDetailsFragment">USER DETAILS FRAGMENT</string>
    <string name="toolbar_title_of_UserToDoFragment">USER TO DO FRAGMENT</string>
    <string name="toolbar_title_of_UserPostFragment">USER POST FRAGMENT</string>

    <string name="user_list_item_name">name</string>
    <string name="user_list_item_email">email</string>
    <string name="user_list_item_phone_number">phoneNumber</string>


</resources>