<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.snehaAssignment1.viewModel.UserListAdapter"/>
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/teal_700"
        app:cardCornerRadius="@dimen/dimen10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name"
                    android:padding="@dimen/dimen10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_list_item_name"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/email"
                    android:padding="@dimen/dimen10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_list_item_email"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/name"/>

                <TextView
                    android:id="@+id/phone_number"
                    android:padding="@dimen/dimen10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_list_item_phone_number"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/email"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>


