<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="com.example.snehaAssignment1.viewModel.LoginViewModel" />
    </data>

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragment.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp">

            <TextView
                android:id="@+id/tv_signUp_title"
                android:onClick="@{()->vm.onSignUpClick()}"
                android:text="@string/tv_signUp_title"
                app:layout_constraintBottom_toTopOf="@id/cardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_login_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_bias="0.0"
                style="@style/loginFragmentSignUpTitle" />

            <TextView
                android:id="@+id/tv_login_title"
                android:text="@string/tv_login_title"
                android:onClick="@{()->vm.onLoginClick()}"
                app:layout_constraintStart_toEndOf="@+id/tv_signUp_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/loginFragmentLoginTitle" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
                style="@style/CardViewStyle">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/et_email_id_layout"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/et_password_layout"
                        style="@style/layoutInsideCardView">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email_id"
                            android:background="@android:color/transparent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"
                            android:drawableStart="@drawable/ic_baseline_email_24"
                            android:drawablePadding="@dimen/dimen10dp"
                            android:hint="@string/hint_email"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/et_password_layout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/btn_login"
                        app:layout_constraintTop_toBottomOf="@+id/et_email_id_layout"
                        style="@style/layoutInsideCardView">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:background="@android:color/transparent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:drawableStart="@drawable/ic_baseline_lock_24"
                            android:drawablePadding="@dimen/dimen10dp"
                            android:hint="@string/hint_password"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_login"
                        android:text="@string/btn_login"
                        android:onClick="@{()->vm.onLoginBtnClick()}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_password_layout"
                        app:layout_constraintVertical_bias="0.589"
                        style="@style/CommonBtnStyle" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
    
</layout>

