<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.example.snehaAssignment1.viewModel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="@dimen/dimen30dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_signUp_title"
            android:text="@string/tv_signUp_title"
            app:layout_constraintBottom_toTopOf="@id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_login_title"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/SignUpFragmentSignUpTitle" />

        <TextView
            android:id="@+id/tv_login_title"
            android:text="@string/tv_login_title"
            android:onClick="@{()->vm.onLoginClick()}"
            app:layout_constraintStart_toEndOf="@+id/tv_signUp_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            style="@style/SignUpFragmentLoginTitle" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signUp_title"
            style="@style/SignUpFragmentCardViewStyle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_name_signUp_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/et_email_id_signUp_layout"
                    style="@style/SignUpFragmentInputLayout">
<!--Two way data binding is used here (@={vm.userName})-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@={vm.userName}"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="@dimen/_5sdp"
                        android:hint="@string/name_signUp"
                        android:inputType="textPersonName"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_email_id_signUp_layout"
                    style="@style/SignUpFragmentInputLayout"
                    app:layout_constraintTop_toBottomOf="@id/et_name_signUp_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/et_mobile_signUp_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email_id_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen10dp"
                        android:background="@android:color/transparent"
                        android:text="@={vm.emailId}"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawablePadding="@dimen/dimen10dp"
                        android:hint="@string/hint_emailId_signUp"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_mobile_signUp_layout"
                    style="@style/SignUpFragmentInputLayout"
                    app:layout_constraintTop_toBottomOf="@id/et_email_id_signUp_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/et_mobile_password_signUp_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_mobile_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen10dp"
                        android:background="@android:color/transparent"
                        android:text="@={vm.mobileNumber}"
                        android:drawableStart="@drawable/ic_baseline_phone_24"
                        android:drawablePadding="@dimen/dimen10dp"
                        android:hint="@string/hint_mobile_signUp"
                        android:inputType="number"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_mobile_password_signUp_layout"
                    style="@style/SignUpFragmentInputLayout"
                    app:layout_constraintTop_toBottomOf="@id/et_mobile_signUp_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/tv_dob">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen10dp"
                        android:text="@={vm.password}"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="@dimen/dimen10dp"
                        android:hint="@string/hint_password_signUp"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_dob"
                    android:onClick="@{()->vm.onDOBClick()}"
                    app:drawableStartCompat="@drawable/ic_baseline_calendar_month_24"
                    app:layout_constraintTop_toBottomOf="@+id/et_mobile_password_signUp_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/btn_signUp"
                    style="@style/CalenderTV" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signUp"
                    android:onClick="@{()->vm.onSignUpClick()}"
                    android:text="@string/btn_signUp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_dob"
                    app:layout_constraintVertical_bias="0.5"
                    style="@style/SignUpButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
